--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.5.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
