--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.5.0",
     "joi": "^17.13.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
