--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "joi": "^17.13.3",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
